--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
 
-.navbar{
-    height: 100px;
-}
 .container{
     overflow: hidden;
 }
@@ -36,6 +33,10 @@
     justify-content: space-evenly;
     align-items: center;
     /* clip-path: polygon(100% 3%, 0% 100%, 100% 100%); */
+  }
+
+  .section p{
+    margin-left: 30px;
   }
 
   .texto{
@@ -119,3 +120,16 @@
     display: flex;
     justify-content: space-between;
 }
+
+
+@media (max-width: 950px) { 
+  .section{
+    flex-direction: column;
+  }
+
+  .sectiion p{
+    width: 100%;
+  }
+}
+
+  
