--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-
+.body{
+  margin: 0;
+  padding: 0;
+  box-sizing:  border-box;
+  border:  solid red 1px;
+}
 .container{
     overflow: hidden;
 }
@@ -35,7 +40,7 @@
     /* clip-path: polygon(100% 3%, 0% 100%, 100% 100%); */
   }
 
-  .section p{
+  .section .texto{
     margin-left: 30px;
   }
 
@@ -43,10 +48,12 @@
     text-align: center;
     max-width: 50%;
   }
-
-  .imagen{
+  .container-img{
+    width: 50%;
+  }
+  .container-img .imagen{
     justify-self: center;
-    width: 500px;
+    width: 100%;
   }
 
 
@@ -92,6 +99,7 @@
 .myVideo{
     margin: 30px 0 30px;
     max-height: 500px;
+    max-width: 100vw;
 }
 
 
@@ -104,6 +112,7 @@
 
 .form{
     width: 50%;
+    padding: 30px;
     
 }
 
@@ -125,10 +134,48 @@
 @media (max-width: 950px) { 
   .section{
     flex-direction: column;
+    width: 80%;
+    margin: 30px auto;
   }
 
-  .sectiion p{
+  .section .texto{
+    all: unset;
+
+  }
+
+    .container-img{
     width: 100%;
+  }
+  .container-img .imagen{
+    justify-self: center;
+    width: 100%;
+  }
+
+  .texto p{
+    width: 100%;
+  }
+
+  .footer{
+flex-direction:  column;
+  }
+
+  .footer .footer_text{
+    width: 80%;
+    margin:  auto;
+  }
+
+
+  .contacto{
+    flex-direction: column;
+  }
+
+  .form{
+    width: 90%;
+    margin:  auto;
+  }
+
+  .iframeMap{
+    max-width: 80%;
   }
 }
 
